@@ -1,0 +1,14 @@
+#' @title real data for human genes
+#'
+#' @description real data for human genes
+#' @name pmat
+#' @docType data
+#' @usage pmat
+#' @format A matrix of hypergeometric p-values, where rows and columns correspond to GO terms and genes.
+#'
+#' @keywords datasets
+#'
+#' @examples
+#' data(pmat)
+
+NULL
