@@ -1,0 +1,14 @@
+#' @title real data for yeast genes
+#'
+#' @description real data for yeast genes
+#' @name yeast
+#' @docType data
+#' @usage yeast
+#' @format A matrix of hypergeometric p-values, where rows and columns correspond to GO terms and genes.
+#'
+#' @keywords datasets
+#'
+#' @examples
+#' data(yeast)
+
+NULL
